= MagLev Change Log

  For more details see: http://bit.ly/d3C6S1

== Unreleased Changes

* implement rb_hash_foreach for C extensions.
* Fix  Object#dup to call allocate , required for C extensions.

== Changes for 25375 2011-03-04
* Update to Bundler 1.0.10
* Update to RubyGems 1.6.0
* Change a few inline functions in ruby.h to MRI compatible macros.
* Changes to make RDiscount work, make IO Enumerable
* Fix Trac 861 & 869
* Update docs/ruby_and_smalltalk
* Fix compile flags in rbconfig for MacOSX
* A couple of bugfixes to underlying GemStone 3.0 system
* Quite a few changes to .gs files in the GemStone 3.0 image directory

== Changes for 25343 2011-02-26
* Fix Trac 866, IO.popen
* Fix Trac 829 in the implementation of eval
* Fix some spec regressions in eval after fix of Trac 829
* Include Tim's updates to mkmf and rbconfig
* Started new document on Ruby <-> Smalltalk interoperability
* A handful of bugfixes to underlying GemStone 3.0 system
* Fix lint problems found by latest GCC

== Changes for 25329 2011-02-24
* Changes to rbconfig.rb and mkmf.rb to support C extensions
* A handful of bugfixes to underlying GemStone 3.0 system

== Changes for 25315 2011-02-23
* Fix Trac 857, 860, 862.
* Implement rb_str_buf_new - note comments in ruby.h
* More details in lib/ruby/1.8/include/Maglev_c_extensions.txt
* Fixes to rbconfig.rb neeeded for mkmf
* A few bugfixes in underlying GemStone 3.0 system
* Major change to compilation infrastructure for GS/S 3.0,
  many undeclared functions are now declared static,
  switch to GCC v 4.5.2 for lint builds on Sparc and Solaris-x86

== Changes for 25289 2011-02-18
* Adjust ruby.h per Trac 851  .
* Fix spec failure in rb_num2dbl with nil arg.
* Fixed two GS/S 3.0 problems

== Changes for 25282 2011-02-17
* Fix Trac 850, problem creating namespace in persistent mode
* Updates for rails 3.0.4
* Initial implementation of Ruby C extensions API.
  See lib/ruby/1.8/Maglev_c_extensions.txt for current restrictions.