@@ -1,0 +1,7 @@
+#if !defined(MAGLEV_ST_H)
+
+#define MAGLEV_ST_H 1
+
+enum st_retval {ST_CONTINUE, ST_STOP, ST_DELETE, ST_CHECK};
+
+#endif
